--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -17,11 +17,14 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" name='search' #searchTerm>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="getPosts(searchTerm)">Search</button>
     </form>
   </div>
 </nav>
 <div *ngFor="let post of posts">
-<h2>{{post.title}}</h2>  
+<h4>{{post.title}}</h4>
+<h4><a href="{{post.url}}"> {{post.url}}</a></h4>
+<hr>
+<br>  
 </div>
