--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,30 +1,51 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<<!DOCTYPE html>
+<html>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#"></a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" name='search' #searchTerm>
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="getPosts(searchTerm)">Search</button>
-    </form>
+
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#"></a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <select #nameid>
+          <option *ngFor="let post of posts" #name [value]="post.id">
+            {{post.name}}
+          </option>
+        </select>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="getPosts1(nameid.value)">Search</button>
+      </form>
+    </div>
+  </nav>
+  <br>
+  <div class="container">
+    <div class="card-group">
+      <div class="card cardsize">
+        <div class="row">
+          <div class='col-md-4' *ngFor="let post of news">
+            <img class="card-img-top cardimg imgi" src="{{post.urlToImage}}" alt="No image">
+            <div class="card-body">
+              <h4 class="card-title"> <a href="{{post.url}}" target="blank">{{post.title}}</a></h4>
+              <p class="card-text">
+                {{post.description}}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</nav>
-<div *ngFor="let post of posts">
-<h4>{{post.title}}</h4>
-<h4><a href="{{post.url}}"> {{post.url}}</a></h4>
-<hr>
-<br>  
 </div>
