--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,5 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-
-
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -31,21 +29,6 @@
     </div>
   </nav>
   <br>
-  <div class="container">
-    <div class="card-group">
-      <div class="card cardsize">
-        <div class="row">
-          <div class='col-md-4' *ngFor="let post of news">
-            <img class="card-img-top cardimg imgi" src="{{post.urlToImage}}" alt="No image">
-            <div class="card-body">
-              <h4 class="card-title"> <a href="{{post.url}}" target="blank">{{post.title}}</a></h4>
-              <p class="card-text">
-                {{post.description}}
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
+
+</html>
