--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,21 +1,25 @@
 <div class="container">
-    <div class="card-group">
-      <div class="card cardsize">
-        <div class="row">
-          <div class='col-md-4' *ngFor="let post of news">
-            <img class="card-img-top cardimg imgi" src="{{post.urlToImage}}" alt="No image">
-            <div class="card-body">
-              <h4 class="card-title"> <a href="{{post.url}}" target="blank">{{post.title}}</a></h4>
-              <p class="card-text">
-                {{post.description}}
-              </p>
+<div class="row">
+<div class='col-md-4' *ngFor="let post of news">
+
+<img class="card-img-top imgi" src="{{post.urlToImage}}" alt="no image">
+  
+ <div class="card-body">
+
+ <h4 class="card-title">
+    <a href="{{post.url}}"  target="blank">{{post.title}}</a> </h4>
+
+   <p class="card-text">
+
+   {{post.description}}<br>
+
+id:{{post._id}}
+    </p>
               <p class="card-footer text-muted">{{post.publishedAt}}</p>
-              <button type="button" class="btn btn-outline-success" (click)="addFav(post)">Add to Favourites</button>
+              <button (click)="addFav(post)" type="button" class="btn btn-outline-info" >Add to Favourites</button>
+
+              
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-
-  <app-favourite></app-favourite>
