--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+	background-image: url("http://cdn.wallpapersafari.com/37/94/JDlbcT.png");
+	background-repeat: no-repeat;
+	background-size:cover;
+}
