--- a/src/app/favourite/favourite.component.css
+++ b/src/app/favourite/favourite.component.css
@@ -1,3 +1,42 @@
 .favbtn {
 	margin-top: 50px;
 }
+
+.row{
+	margin-top: 20px;
+}
+
+.imgi {
+	height:400px;
+	width:100%;
+}
+
+.container{
+		background-color: #b3fff0;
+ }
+
+ a{
+ 	color:brown;
+ }
+
+ .col-sm-6{
+	text-align: center;
+}
+
+.footer{
+	background-color: steelblue;
+}
+
+.container{
+	margin-bottom: 4.5%;
+}
+
+ @media(max-width: 768px) {
+	.container{
+		margin-bottom: 25%;
+	}
+	
+}
+
+
+
