--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -2,3 +2,21 @@
 	height: auto;
 	width:100%;
 }
+
+.col-sm-6{
+	text-align: center;
+}
+
+.fixed-bottom{
+	background-color: steelblue;
+}
+
+
+.sizeimg {
+    width: 100%;
+    height: 200px;
+}
+
+ select{
+  height: 2rem;
+ }
