--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,34 +1,55 @@
-<!DOCTYPE html>
-<html>
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top container">
-    <a class="navbar-brand" href="#">Navbar</a>
+<body>
+<header>
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="#">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+          <a class="nav-link" [routerLink]="'/fav'">Favourites <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#"></a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#"></a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
+     
+    </div>
+  </nav>
+  </div>
+  </header>
+  <br>
+  <br>
+  
+<div class="container">
+  <div class="jumbotron jumbotron-fluid">
+  
+  <p class="lead">India's leading News Portal. Here you can search news among 50+ leading news websites of the world</p>
+    <img class="sizeimg" src="../../assets/bgimage.png">
+    
+  </div>
+</div>
+<br>
+<div class="container">
+<div class="row">
+   <div class="col-md-4">
+   </div>
+   <div class="col-md-4">
+   <form class="form-inline my-2 my-lg-0">
         <select #nameid>
           <option *ngFor="let post of posts" #name [value]="post.id">
             {{post.name}}
           </option>
-        </select>
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="getPosts1(nameid.value)">Search</button>
-      </form>
-    </div>
-  </nav>
-  <br>
+        </select>&nbsp;
+        <button class="btn btn-primary my-2 my-sm-0 btn-lg" type="submit" [routerLink]="'/search'" (click)="getPosts1(nameid.value)">Search</button>
+       </form>
+        </div>
+      
+  </div>
 </div>
-
-</html>
+</body>
