--- a/src/app/favourite/favourite.component.css
+++ b/src/app/favourite/favourite.component.css
@@ -12,7 +12,7 @@
 }
 
 .container{
-		background-color: #b3fff0;
+		background-color: lightgray;
  }
 
  a{
@@ -24,7 +24,7 @@
 }
 
 .footer{
-	background-color: steelblue;
+	background-color: whitesmoke;
 }
 
 .container{
