--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 body{
-	background-image: url("http://cdn.wallpapersafari.com/37/94/JDlbcT.png");
+	background-image: url("http://www.michaelkihn.de/Main%20Background.jpg");
 	background-repeat: no-repeat;
 	background-size:cover;
 }
+
+/* http://cdn.wallpapersafari.com/37/94/JDlbcT.png */
