--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -26,7 +26,7 @@
   <br>
   <br>
   
-<div class="container">
+<div class="container-fluid">
   <div class="jumbotron jumbotron-fluid">
   
   <p class="lead">India's leading News Portal. Here you can search news among 50+ leading news websites of the world</p>
