--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,10 +12,10 @@
           <a class="nav-link" [routerLink]="'/fav'">Favourites <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"></a>
+          <a class="nav-link" [routerLink]="'/login'">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#"></a>
+          <a class="nav-link" [routerLink]="'/signup'">Sign Up</a>
         </li>
       </ul>
      
@@ -26,7 +26,7 @@
   <br>
   <br>
   
-<div class="container-fluid">
+<div class="container">
   <div class="jumbotron jumbotron-fluid">
   
   <p class="lead">India's leading News Portal. Here you can search news among 50+ leading news websites of the world</p>
